@@ -18,6 +18,10 @@ system-wide configuration).
 
 Size limit on AppIcon files.
 
+More display styles.
+
+Show Target for pinboard and panels.
+
 
 FEATURES FOR 1.1
 
@@ -65,8 +69,6 @@ In single click mode, beep when the user tries to double click?
 Options to set where the toolbar appears.
 
 Display extra info in the toolbar (file under cursor, size, etc).
-
-More display styles.
 
 Features to automatically set the size of filer windows?
 
