@@ -51,6 +51,8 @@ gint		screen_width, screen_height;
 
 static GdkAtom xa_cardinal;
 
+static GtkWidget *current_dialog = NULL;
+
 void gui_support_init()
 {
 	fixed_font = gdk_font_load("fixed");
@@ -86,6 +88,9 @@ static void choice_clicked(GtkWidget *widget, gpointer number)
  * The user can choose from a selection of buttons at the bottom.
  * Returns -1 if the window is destroyed, or the number of the button
  * if one is clicked (starting from zero).
+ *
+ * If a dialog is already open, returns -1 without waiting AND
+ * brings the current dialog to the front.
  */
 int get_choice(char *title,
 	       char *message,
@@ -94,30 +99,39 @@ int get_choice(char *title,
 	GtkWidget	*dialog;
 	GtkWidget	*vbox, *action_area, *separator;
 	GtkWidget	*text, *text_container;
-	GtkWidget	*button = NULL;
+	GtkWidget	*button = NULL, *default_button;
 	int		i, retval;
 	va_list	ap;
 	int		choice_return;
 
-	dialog = gtk_window_new(GTK_WINDOW_DIALOG);
+	if (current_dialog)
+	{
+		gtk_widget_hide(current_dialog);
+		gtk_widget_show(current_dialog);
+		return -1;
+	}
+
+	current_dialog = dialog = gtk_window_new(GTK_WINDOW_DIALOG);
+	GTK_WIDGET_UNSET_FLAGS(dialog, GTK_CAN_FOCUS);
 	gtk_window_set_modal(GTK_WINDOW(dialog), TRUE);
 	gtk_window_set_title(GTK_WINDOW(dialog), title);
 	gtk_window_set_position(GTK_WINDOW(dialog), GTK_WIN_POS_CENTER);
+	gtk_container_set_border_width(GTK_CONTAINER(dialog), 2);
 
 	vbox = gtk_vbox_new(FALSE, 0);
 	gtk_container_add(GTK_CONTAINER(dialog), vbox);
 
 	action_area = gtk_hbox_new(TRUE, 5);
-	gtk_container_set_border_width(GTK_CONTAINER(action_area), 10);
+	gtk_container_set_border_width(GTK_CONTAINER(action_area), 2);
 	gtk_box_pack_end(GTK_BOX(vbox), action_area, FALSE, TRUE, 0);
 
 	separator = gtk_hseparator_new ();
-	gtk_box_pack_end(GTK_BOX(vbox), separator, FALSE, TRUE, 0);
+	gtk_box_pack_end(GTK_BOX(vbox), separator, FALSE, TRUE, 2);
 
 	text = gtk_label_new(message);
 	gtk_label_set_line_wrap(GTK_LABEL(text), TRUE);
 	text_container = gtk_event_box_new();
-	gtk_container_set_border_width(GTK_CONTAINER(text_container), 32);
+	gtk_container_set_border_width(GTK_CONTAINER(text_container), 40);
 	gtk_container_add(GTK_CONTAINER(text_container), text);
 
 	gtk_box_pack_start(GTK_BOX(vbox),
@@ -126,21 +140,25 @@ int get_choice(char *title,
 
 	va_start(ap, number_of_buttons);
 
+	default_button = NULL;
 	for (i = 0; i < number_of_buttons; i++)
 	{
 		button = gtk_button_new_with_label(va_arg(ap, char *));
+		GTK_WIDGET_SET_FLAGS(button, GTK_CAN_DEFAULT);
+		gtk_misc_set_padding(GTK_MISC(GTK_BIN(button)->child), 16, 2);
 		gtk_object_set_data(GTK_OBJECT(button), "choice_return",
 				&choice_return);
-		gtk_box_pack_start(GTK_BOX(action_area),
-				button,
-				TRUE, TRUE, 16);
+		gtk_box_pack_start(GTK_BOX(action_area), button, TRUE, TRUE, 0);
 		gtk_signal_connect(GTK_OBJECT(button), "clicked",
-				choice_clicked, (gpointer) i);
-		if (i == 0)
-			gtk_window_set_focus(GTK_WINDOW(dialog), button);
+					choice_clicked, (gpointer) i);
+		if (!default_button)
+			default_button = button;
 	}
-	if (!i)
-		gtk_widget_grab_focus(button);
+
+	gtk_window_set_focus(GTK_WINDOW(dialog), default_button);
+	gtk_window_set_default(GTK_WINDOW(dialog), default_button);
+	gtk_container_set_focus_child(GTK_CONTAINER(action_area),
+			default_button);
 
 	va_end(ap);
 
@@ -160,6 +178,8 @@ int get_choice(char *title,
 
 	if (retval != -1)
 		gtk_widget_destroy(dialog);
+
+	current_dialog = NULL;
 
 	return retval;
 }
