@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+10-Sep-2000
+~~~~~~~~~~~
+Deleting items first checks if it will affect the pinboard or panel. A
+warning is displayed if so. Upgraded the query dialog (from ROX-Session).
+
 09-Sep-2000
 ~~~~~~~~~~~
 'Unique filer windows' option now has no effect while the spring open
